--- a/example/src/style.css
+++ b/example/src/style.css
@@ -67,6 +67,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  margin-bottom: 0.3rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
