--- a/example/src/style.css
+++ b/example/src/style.css
@@ -40,21 +40,13 @@ h1 {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.chart {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
-
 .card {
   padding: 2em;
 }
@@ -64,23 +56,25 @@ h1 {
   font-size: 1.25rem;
 }
 
-button {
+select {
+  appearance: none;
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.6em;
   margin-bottom: 0.3rem;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
+  text-align: center;
   transition: border-color 0.25s;
 }
-button:hover {
+select:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
+select:focus,
+select:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
@@ -92,7 +86,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  button {
+  select {
     background-color: #f9f9f9;
   }
 }
