--- a/examples/chart/src/style.css
+++ b/examples/chart/src/style.css
@@ -56,6 +56,26 @@ h1 {
   font-size: 1.25rem;
 }
 
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  margin-bottom: 0.3rem;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
 select {
   appearance: none;
   border-radius: 8px;
@@ -87,6 +107,9 @@ select:focus-visible {
     color: #747bff;
   }
   select {
+    background-color: #f9f9f9;
+  }
+  button {
     background-color: #f9f9f9;
   }
 }
