--- a/examples/flappy-bird/src/style.css
+++ b/examples/flappy-bird/src/style.css
@@ -19,12 +19,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  text-align: center;
 }
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   width: 100%;
 }
 
@@ -33,6 +34,29 @@ body {
   border: 2px solid black;
   display: block;
   margin: auto;
+}
+
+select {
+  appearance: none;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em;
+  margin-bottom: 0.3rem;
+  margin-top: 0.6rem;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  text-align: center;
+  transition: border-color 0.25s;
+}
+select:hover {
+  border-color: #646cff;
+}
+select:focus,
+select:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
