--- a/examples/chart/src/style.css
+++ b/examples/chart/src/style.css
@@ -5,7 +5,11 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
+
   background-color: #242424;
+  background-image: url("cartographer.png");
+  background-position: 0 0;
+  background-repeat: repeat;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,45 +17,81 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
 body {
   margin: 0;
   display: flex;
+  flex-wrap: wrap;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-h1 a {
-  color: inherit;
-}
-
+header,
+footer,
 #app {
-  max-width: 1280px;
+  flex: 0 0 100%;
+  max-width: 1024px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
   width: 100%;
 }
-.chart {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
+
+a:hover {
+  color: #535bf2;
+}
+
+footer small {
+  gap: 1rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+footer a {
+  color: #c8c8c8;
+}
+
+footer a:hover {
+  color: #898989;
+}
+
+header {
+  padding: 1rem 0;
+}
+
+h1 {
+  font-size: 3rem;
+  margin: 0;
+}
+
+h2 {
+  font-size: 1.2rem;
+  font-weight: normal;
+  margin: 0;
+}
+
+.chart {
+  background: #2e2e2e;
+  border-radius: 2rem;
+  padding: 2rem;
+  width: 100%;
+  max-width: 1024px;
+  margin: 0 2rem;
+}
+
 .card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
   padding: 2em;
 }
 
@@ -67,9 +107,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -89,9 +131,11 @@ select {
   text-align: center;
   transition: border-color 0.25s;
 }
+
 select:hover {
   border-color: #646cff;
 }
+
 select:focus,
 select:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -102,13 +146,21 @@ select:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
-  select {
-    background-color: #f9f9f9;
-  }
+
+  select,
   button {
     background-color: #f9f9f9;
+  }
+
+  .chart {
+    background-color: #f9f9f9;
+  }
+
+  footer a {
+    color: #213547;
   }
 }
