--- a/examples/chart/src/style.css
+++ b/examples/chart/src/style.css
@@ -49,23 +49,6 @@ a:hover {
   color: #535bf2;
 }
 
-footer small {
-  gap: 1rem;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 1rem;
-}
-
-footer a {
-  color: #c8c8c8;
-}
-
-footer a:hover {
-  color: #898989;
-}
-
 header {
   padding-bottom: 1rem;
 }
@@ -162,6 +145,24 @@ select:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+footer small {
+  gap: 1rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem;
+}
+
+footer,
+footer a {
+  color: #898989;
+}
+
+footer a:hover {
+  border-color: #646cff;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
@@ -183,6 +184,9 @@ select:focus-visible {
 
   footer a {
     color: #213547;
+  }
+  footer a:hover {
+    color: #747bff;
   }
 }
 
