--- a/examples/chart/src/style.css
+++ b/examples/chart/src/style.css
@@ -54,16 +54,20 @@ header {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2.875rem;
   margin: 0;
   padding: 0 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
 }
 
 h2 {
   font-size: 1.2rem;
   font-weight: normal;
   margin: 0;
-  padding: 0 1rem;
+  padding: 0 1.5rem;
 }
 
 #masses {
