--- a/examples/kilter-board/src/style.css
+++ b/examples/kilter-board/src/style.css
@@ -75,6 +75,14 @@ strong {
   display: block;
 }
 
+small {
+  margin: 1rem 0;
+  display: block;
+  strong {
+    display: inline;
+  }
+}
+
 p {
   max-width: 700px;
   display: block;
