--- a/examples/kilter-board/src/style.css
+++ b/examples/kilter-board/src/style.css
@@ -100,4 +100,14 @@ code {
     color: #213547;
     background-color: #ffffff;
   }
+
+  a:hover {
+    color: #747bff;
+  }
+
+  select,
+  input,
+  button {
+    background-color: #e6e6e6;
+  }
 }
